k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: end-to-end-assignment
  labels:
    app: end-to-end-assignment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: end-to-end-assignment
  template:
    metadata:
      labels:
        app: end-to-end-assignment
    spec:
      containers:
      - name: nextjs
        image: quay.io/jm_carnicero/placeholder_image:placeholder_tag
        ports:
        - containerPort: 3000
