k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: end-to-end-assignment
spec:
  selector:
    app: end-to-end-assignment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
