k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: end-to-end-assignment
spec:
  to:
    kind: Service
    name: end-to-end-assignment
